WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
193294
REGRESSION (
r237658
): Tap highlight limits cause the highlight to no longer show with legitimate button sizes
https://bugs.webkit.org/show_bug.cgi?id=193294
Summary
REGRESSION (r237658): Tap highlight limits cause the highlight to no longer s...
alan
Reported
2019-01-09 12:45:27 PST
The new tap highlight limits () make some <button>s with reasonable sizes not have any tap feedback, making them feel broken.
Attachments
Patch
(15.14 KB, patch)
2019-01-09 12:48 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(15.15 KB, patch)
2019-01-09 13:13 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(15.18 KB, patch)
2019-01-09 13:17 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(17.51 KB, patch)
2019-01-10 10:09 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2019-01-09 12:45:38 PST
<
rdar://problem/46006678
>
alan
Comment 2
2019-01-09 12:48:33 PST
Created
attachment 358727
[details]
Patch
EWS Watchlist
Comment 3
2019-01-09 12:50:47 PST
Attachment 358727
[details]
did not pass style-queue: ERROR: Source/WebKit/UIProcess/WebPageProxy.h:1783: The parameter name "color" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 1 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Simon Fraser (smfr)
Comment 4
2019-01-09 13:01:20 PST
Comment on
attachment 358727
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=358727&action=review
> Source/WebKit/UIProcess/ios/WKContentViewInteraction.h:245 > + BOOL useHeuristicToDecideToPaint { false };
nodeHasBuiltInClickHandling?
> Source/WebKit/WebProcess/WebPage/ios/WebPageIOS.mm:728 > + send(Messages::WebPageProxy::DidGetTapHighlightGeometries(requestID, highlightColor, quads, roundedIntSize(borderRadii.topLeft()), roundedIntSize(borderRadii.topRight()), roundedIntSize(borderRadii.bottomLeft()), roundedIntSize(borderRadii.bottomRight()), !is<HTMLInputElement>(node)));
Need to ensure that <button> and <label> work too. Maybe use willRespondToMouseClickEvents().
alan
Comment 5
2019-01-09 13:13:03 PST
Created
attachment 358731
[details]
Patch
EWS Watchlist
Comment 6
2019-01-09 13:15:43 PST
Attachment 358731
[details]
did not pass style-queue: ERROR: Source/WebKit/UIProcess/WebPageProxy.h:1783: The parameter name "color" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 1 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
alan
Comment 7
2019-01-09 13:17:19 PST
Created
attachment 358732
[details]
Patch
Wenson Hsieh
Comment 8
2019-01-09 13:19:08 PST
(In reply to Simon Fraser (smfr) from
comment #4
)
> Comment on
attachment 358727
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=358727&action=review
> > > Source/WebKit/UIProcess/ios/WKContentViewInteraction.h:245 > > + BOOL useHeuristicToDecideToPaint { false }; > > nodeHasBuiltInClickHandling? > > > Source/WebKit/WebProcess/WebPage/ios/WebPageIOS.mm:728 > > + send(Messages::WebPageProxy::DidGetTapHighlightGeometries(requestID, highlightColor, quads, roundedIntSize(borderRadii.topLeft()), roundedIntSize(borderRadii.topRight()), roundedIntSize(borderRadii.bottomLeft()), roundedIntSize(borderRadii.bottomRight()), !is<HTMLInputElement>(node))); > > Need to ensure that <button> and <label> work too. Maybe use > willRespondToMouseClickEvents().
Would using willRespondToMouseClickEvents() regress <
rdar://problem/43615142
>?
EWS Watchlist
Comment 9
2019-01-09 13:19:56 PST
Attachment 358732
[details]
did not pass style-queue: ERROR: Source/WebKit/UIProcess/WebPageProxy.h:1783: The parameter name "color" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 1 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
alan
Comment 10
2019-01-10 10:09:28 PST
Created
attachment 358804
[details]
Patch
EWS Watchlist
Comment 11
2019-01-10 10:12:29 PST
Attachment 358804
[details]
did not pass style-queue: ERROR: Source/WebKit/UIProcess/WebPageProxy.h:1783: The parameter name "color" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 1 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
Simon Fraser (smfr)
Comment 12
2019-01-10 13:30:05 PST
Comment on
attachment 358804
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=358804&action=review
> Source/WebKit/WebProcess/WebPage/ios/WebPageIOS.mm:730 > + auto nodeHasBuiltInClickHandling = is<HTMLFormControlElement>(*node) || is<HTMLAnchorElement>(*node) || is<HTMLLabelElement>(*node) || is<HTMLSummaryElement>(*node) || node->isLink();
auto -> bool
alan
Comment 13
2019-01-10 13:50:48 PST
Committed
r239843
: <
https://trac.webkit.org/changeset/239843
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug